<resources>
    <string name="app_name">virtualtour</string>
    <string name="title_home">Home</string>
    <string name="title_putra">Asrama Putra</string>
    <string name="title_putri">Asrama Putri</string>
    <string name="asramaA">Foto 360 Asrama A</string>
    <string name="profil_asramaA">Asrama A merupakan salah satu asrama yang terdapat di Pondok Pesantren Ngalah. Asrama A berdiri pada tahun 1985, merupakan bangunan pondok yang pertama kali di bangun. Adapan pengasuh asrama A adalah Gus Muhammad Jamaluddin dan Neng Siti Nuronia. Jumlah santri putra yang kini menetap di Asrama A ada 444 santri dengan jumlah pengurus 37 santri.</string>
    <string name="kontak_asramaA">asramaha.27@gmail.com</string>
    <string name="fasilitasA1">1 Kantor</string>
    <string name="fasilitasA2">27 Kamar</string>
    <string name="fasilitasA3">2 Kamar Mandi</string>
    <string name="fasilitasA4">10 WC</string>
    <string name="fasilitasA5">1 Masjid</string>
    <string name="fasilitasA6">1 Toilet Tamu</string>
    <string name="fasilitasA7">1 Kantin</string>
    <string name="fasilitasA8">1 Ruang Tamu</string>
    <string name="fasilitasA9">1 Kamar Tamu</string>
    <string name="kegiatan_harian_asramaA">Santri di Asrama A mengikuti kegiatan harian seperti jamaah 5 waktu, jamaah sholat duha, pengajian bandongan, sekolah formal, sekolah non-formal, lalaran nadhoman sesuai kelasnya, madrasatul quran, belajar bersama, ngaji sorogan kitab sesuai kelasnya, pembacaan asmaul husna, pembacaan utawi dan setoran nadhomah</string>
    <string name="kegiatan_mingguan_asramaA">Santri di Asrama A mengikuti kegiatan mingguan seperti yasin dan tahlil, yasin fadhilah dan istigosah, muhadoroh kamar, pembacaan manaqib, pembacaan diba, ekstra kulikuler, dan roan bersama</string>
    <string name="kegiatan_bulanan_asramaA">Santri di Asrama A mengikuti kegiatan bulanan seperti dzikrul ghofilin, tadarus Al-quran, khataman Al-quran, muhadoroh akbar, pembacaan istigosah tahlil bersama</string>
    <string name="kegiatan_tahunan_asramaA">Santri di Asrama A mengikuti kegiatan tahunan seperti  peringatan harlah asrama A, OSABA asrama bagi santri baru dan PHBI/PHBN</string>
    <string name="asramaB">Foto 360 Asrama B</string>
    <string name="profil_asramaB">Asrama B merupakan salah satu asrama yang berada di Pondok Pesantren Ngalah. Pengasuh asrama B adalah Gus Muhammad Jamaluddin dan Neng Siti Nuronia. Jumlah Santri Putri yang menetap di Asrama B adalah 262 Santri dengan jumlah pengurus Sebanyak 24 Santri</string>
    <string name="kontak_asramaB">089530411249</string>
    <string name="fasilitasB1">1 Kantor Asrama</string>
    <string name="fasilitasB2">1 Kantor Pusat</string>
    <string name="fasilitasB3">15 Ruang Kamar</string>
    <string name="fasilitasB4">1 Warnet Asrama</string>
    <string name="fasilitasB5">1 Koperasi Asrama</string>
    <string name="fasilitasB6">4 Kamar Mandi</string>
    <string name="fasilitasB7">18 WC</string>
    <string name="fasilitasB8">3 Kolam Air</string>
    <string name="fasilitasB9">2 Jemuran</string>
    <string name="kegiatan_harian_asramaB">Santri di Asrama B mengikuti kegiatan harian seperti Jamaah sholat lima waktu, pengajian sorogan pagi dan malam, jamaah sholat duha, pembacaan surat berfaedah atau juz 30, lalaran nadhoman sesuai jenjang madin, syawir pagi, sekolah formal, pengajian tafsir, pengajian taklim muatalim, syawir sore, setoran nadhoman, madrasatul quran, sekolah madin dan pengajian bandongan malam </string>
    <string name="kegiatan_mingguan_asramaB">Santri di Asrama B mengikuti kegiatan mingguan seperti tartilan, ubudiyah, tahlilan, pembelajaran nahwu, jamaah sholat malam, manaqib, yasinan, dibaiyah, muhadoroh dan bimbingan al-banjari el-halwa</string>
    <string name="kegiatan_bulanan_asramaB">Santri di Asrama B mengikuti kegiatan bulanan seperti dzikrul gofilin, istigosah, rotiban, roan bersama dan khataman Al-quran </string>
    <string name="kegiatan_tahunan_asramaB">Santri di Asrama B mengikuti kegiatan tahunan seperti peringatan tahun baru islam, peringatan maulid nabi, haflah akhirussanah dan pelatihan mc dan pidato </string>
    <string name="asramaC">Foto 360 Asrama C</string>
    <string name="profil_asramaC">Asrama C merupakan salah satu asrama yang terdapat di Pondok pesantren Ngalah, adapun Pengasuh Asrama C sama seperti Asrama A dan B, yaitu Gus Muhammad Jamaluddin dan Neng Siti Nuronia. </string>
    <string name="kontak_asramaC">0895637043388</string>
    <string name="fasilitasC1">1 Kantor Asrama</string>
    <string name="fasilitasC2">3 Lokal Kamar Mandi</string>
    <string name="fasilitasC3">12 Kamar Tidur</string>
    <string name="fasilitasC4">1 Warnet</string>
    <string name="fasilitasC5">1 Aula</string>
    <string name="fasilitasC6">10 WC</string>
    <string name="kegiatan_harian_asramaC">Santri di Asrama C mengikuti kegiatan harian seperti Jamaah sholat subuh, nadhoman sesuai kelas masing-masing, pengajian sorogan dan mutolaah, pengajian yasin, al-waqiah dan ar-rahman, piket halaman asrama, jamaah sholat duha, sekolah formal, jamaah sholat asar, pengajian kitab tafsir, pengajian kitab taklim, pengajian kitab Wasoyah, Risalatul Mahid ,Taisil Kholaq, pengajian surah Al-waqiah, jaamah sholat magrib, madrasatul quran, jamaah sholat isya dan madrasah diniah </string>
    <string name="kegiatan_mingguan_asramaC">Santri di Asrama C mengikuti kegiatan mingguan seperti Pengajian Qomiut tughyan, pengajian kitab Syarah Hikam, Pengaian Kitab Tanqihul Qoul, Pengajian KItab Fathul Qorib, tahwil bersamah, membaca surat Yasin bersama, dibaiyah, tajwidan, utawi dan irob Asmaul khusna bersama, manaqiban, istigosah, muhadoroh asrama, tadarus Al-quran, pembelajaran Qiroah dan Skil Atlas Wali Songo, Jawabul masail, Banjari, MC, Pidato, Kaligrafi. </string>
    <string name="kegiatan_bulanan_asramaC">Santri di Asrama C mengikuti kegiatan bulanan seperti muhadoroh, roan akbar, ubudiyah, burdah, dan dzikrul gofilin </string>
    <string name="kegiatan_tahunan_asramaC">Santri di Asrama  C mengikuti kegiatan tahunan seperti OSABA asrama, peringatan tahun baru islam, peringatan 10 muharrom, peringatan maulid nabi dan peringatan 17 agustus 1945 </string>
    <string name="asramaD">Foto 360 Asrama D</string>
    <string name="profil_asramaD">Asrama D merupakan salah satu asrama yang berada di Pondok Pesantren Ngalah. Asrama D berdiri setelah asrama A B C pada tahun 2001. Adapun pengasuh Asrama D adalah Dr. H. Agus Yusuf Wijaya, Lc,MM dan Neng Siti Faiqoh. Jumlah Santri putri di Asrama D ada307 Santri dengan JUmlah Pengurus 25 Santri</string>
    <string name="kontak_asramaD">0343614244</string>
    <string name="fasilitasD1">25 Ruang Kamar</string>
    <string name="fasilitasD2">1 Kantor Asrama</string>
    <string name="fasilitasD3">1 Kantor MQ</string>
    <string name="fasilitasD4">1 Mushola</string>
    <string name="fasilitasD5">1 Aula</string>
    <string name="fasilitasD6">1 Ruang Kantin</string>
    <string name="fasilitasD7">1 Koperasi</string>
    <string name="fasilitasD8">2 Lokal Kamar Mandi</string>
    <string name="fasilitasD9">1 Lokal WC</string>
    <string name="fasilitasD10">1 Lokal Cuci Baju</string>
    <string name="fasilitasD11">1 Gudang</string>
    <string name="fasilitasD12">1 Ruang Pengiriman</string>
    <string name="fasilitasD13">1 Ruang Warnet</string>
    <string name="kegiatan_harian_asramaD">Santri di Asrama D mengikuti kegiatan harian seperti Jamaah sholat 5 waktu, jamaah sholat duha, pengajian bandongan, pengajian sorogan, sekolah formal, sekolah non formal, pengajian MQ, Pembacaan surat Al-mulk, pembacaan Surat Yasin dan Nadhoman </string>
    <string name="kegiatan_mingguan_asramaD">Santri di Asrama D mengikuti kegiatan mingguan seperti Tajwidan, iroban, tahlilan, rotiban, dibaiyah, asmaul khusna, jamaah sholat malam, manaqib, tadarus Al-quran, bimbingan Tilawah Quran, bimbingan Gema sholawat, syawir dan kajian galak gampil </string>
    <string name="kegiatan_bulanan_asramaD">Santri di Asrama D mengikuti kegiatan bulanan seperti Dzikrul gofilin, istigosah, budrahan, dan khataman Al-quran </string>
    <string name="kegiatan_tahunan_asramaD">Santri di Asrama D mengikuti kegiatan tahunan seperti Ubudiyah Santri Baru  </string>
    <string name="asramaF">Foto 360 Asrama F</string>
    <string name="profil_asramaF">Asrama F merupakan Salah satu asrama yang terdapat di Pondok Pesantren Ngalah. Asrama F berdiri tahun 2001 dan diasuh oleh Dr. H. Agus Yusuf Wijaya, Lc,MM dan Neng Faiqoh. Jumlah Santri putra yang kini menetap di asrama F ada 320 Santri dengan jumlah pengurus 36 Santri</string>
    <string name="kontak_asramaF">081334200505</string>
    <string name="fasilitasF1">1 Kantor Asrama</string>
    <string name="fasilitasF2">22 Ruang Kamar</string>
    <string name="fasilitasF3">1 Warnet</string>
    <string name="fasilitasF4">2 Lokal Kantin</string>
    <string name="fasilitasF5">10 Ruang Kamar Mandi</string>
    <string name="fasilitasF6">15 Ruang WC</string>
    <string name="fasilitasF7">1 Kolam Air</string>
    <string name="fasilitasF8">3 Lokal Jemuran</string>
    <string name="kegiatan_harian_asramaF">Santri di Asrama f mengikuti kegiatan harian seperti jamaah solat 5 waktu, pengajian sorogan, jamaah solat duha, pembacaan utawi, lalaran nadzoman sesuai jenjang madin, sekolah formal, pengajian Tafsir, pengajian Taklim mutaalim, setoran nadzoman, Madrasatul quran, sekolah madin, pengajian bandongan malam, sholat malam danpengajian Amtsilati </string>
    <string name="kegiatan_mingguan_asramaF">Santri di Asrama f mengikuti kegiatan mingguan seperti Ubudiyah, Tahlilan, Manaqiban, Yasinan, Dibaiyah, Muhadhoroh dan roan </string>
    <string name="kegiatan_bulanan_asramaF">Santri di Asrama f mengikuti kegiatan bulanan seperti Dzikrul Ghofilin, istighosah, Khataman Al Quran dan Muhadhoroh Akbar </string>
    <string name="kegiatan_tahunan_asramaF">Santri di Asrama f mengikuti kegiatan tahunan seperti  peringatan tahun baru islam, peringatan maulid nabi, Haflah Akhirussanah Dan pelatihan MC dan pidato  </string>
    <string name="asramaG">Foto 360 Asrama G</string>
    <string name="alamat_asramaG">Asrama G merupakan Salah Satu Asrama yang berada di Pondok Pesantren Ngalah. Asrama ini berdiri tahun 2018 dan di asuh oleh Agus H Yaqutun Nafies dan Neng Khurrotin. Adapaun santri putra yang kini menetap di asrama G sebanyak 103 santri dengan jumlah pengurus sebanyak 16 santri.</string>
    <string name="profil_asramaG">asramag00@gmail.com</string>
    <string name="fasilitasG1">1 Kantor Asrama</string>
    <string name="fasilitasG2">18 Ruang Kamar</string>
    <string name="fasilitasG3">2 Lokal Kamar Mandi</string>
    <string name="fasilitasG4">1 Mushola</string>
    <string name="fasilitasG5">10 WC</string>
    <string name="fasilitasG6">1 Kantin</string>
    <string name="kegiatan_harian_asramaG">Santri di Asrama G mengikuti kegiatan harian seperti jamaah 5 waktu, jamaah sholat duha, pengajian bandongan, sekolah formal, sekolah non-formal, lalaran nadhoman sesuai kelasnya, madrasatul quran, belajar bersama, ngaji sorogan kitab sesuai kelasnya, pembacaan asmaul husna, pembacaan utawi dan setoran nadhomah </string>
    <string name="kegiatan_mingguan_asramaG">Santri di Asrama G mengikuti kegiatan mingguan seperti yasin dan tahlil, yasin fadhilah dan istigosah, muhadoroh kamar, pembacaan manaqib, pembacaan diba, ekstra kulikuler, dan roan bersama</string>
    <string name="kegiatan_bulanan_asramaG">Santri di Asrama G mengikuti kegiatan bulanan seperti dzikrul ghofilin, tadarus Al-quran, khataman Al-quran, muhadoroh akbar, pembacaan istigosah tahlil bersama</string>
    <string name="kegiatan_tahunan_asramaG">Santri di Asrama G mengikuti kegiatan tahunan seperti peringatan harlah asrama G, OSABA asrama bagi santri baru dan PHBI/PHBN  </string>
    <string name="asramaH">Foto 360 Asrama H</string>
</resources>