<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Foto 360 -->
        <ImageView
            android:id="@+id/image_360D"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/photo360_asrama_d"
            android:contentDescription="@string/asramaD"
            android:scaleType="centerCrop"
            android:onClick="view360Image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/directionOneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lihat Lokasi Di Google Maps"
            android:backgroundTint="@color/green"/>

        <!-- Profil -->
        <TextView
            android:id="@+id/profilD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profil_asramaD"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:paddingTop="8dp"
            android:gravity="start"/>

        <!-- Kontak Asrama -->
        <TextView
            android:id="@+id/kontakD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kontak_asramaD"
            android:textSize="14sp"
            android:paddingTop="8dp"
            android:gravity="start"/>

        <!-- Fasilitas Asrama -->
        <TextView
            android:id="@+id/facilities_titleD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fasilitas"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="8dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Fasilitas 1 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD1"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 2 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD2"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 3 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD3"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 4 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD4"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 5 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD5"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 6 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD6"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 7 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD7"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 8 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD8"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 9 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD9"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 10 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD10"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 11 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD11"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 12 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD12"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

                <!-- Fasilitas 13 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="@drawable/fasilitas_shape"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasilitasD13"
                        android:textSize="14sp"
                        android:gravity="center"/>
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <!-- Kegiatan Asrama -->
        <TextView
            android:id="@+id/activities_introD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selain Tersedianya Fasilitas yang memadai, di asrama D juga terdapat berbagai kegiatan, meliputi:"
            android:textSize="16sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Kegiatan Harian -->
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/placeholder_shape"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kegiatan Harian"
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kegiatan_harian_asramaD"
                        android:textSize="14sp"
                        android:paddingTop="8dp"
                        android:gravity="start"/>
                </LinearLayout>

                <!-- Kegiatan Mingguan -->
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/placeholder_shape"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kegiatan Mingguan"
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kegiatan_mingguan_asramaD"
                        android:textSize="14sp"
                        android:paddingTop="8dp"
                        android:gravity="start"/>
                </LinearLayout>

                <!-- Kegiatan Bulanan -->
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/placeholder_shape"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kegiatan Bulanan"
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kegiatan_bulanan_asramaD"
                        android:textSize="14sp"
                        android:paddingTop="8dp"
                        android:gravity="start"/>
                </LinearLayout>

                <!-- Kegiatan Tahunan -->
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/placeholder_shape"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kegiatan Tahunan"
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kegiatan_tahunan_asramaD"
                        android:textSize="14sp"
                        android:paddingTop="8dp"
                        android:gravity="start"/>
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
</ScrollView>